<resources>
    <string name="app_name">listPlay</string>
    <string name="logo_error_text">Logo</string>
    <string name="playlists_page_header">Playlists</string>
    <string name="add_playlist_button_text">add_playlist</string>
    <string name="add_playlist_fragment_header">Add playlist</string>
    <string name="edit_text_playlist_name_hint">Enter playlist name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_name_plain_header">Playlust name</string>
    <string name="youtube_link_plain_header">Link to youtube playlist</string>
    <string name="edit_text_playlist_link_hint">Enter playlist link</string>
    <string name="savePlaylistButtonText">Save</string>
</resources>