<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistsPage"
    android:descendantFocusability="blocksDescendants">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/logo_error_text"
                app:srcCompat="@drawable/logo100"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/corbell"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/purple"
                android:textSize="36sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/playlistsPageHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/corbelb"
            android:text="@string/playlists_page_header"
            android:textColor="@color/purple"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <ImageButton
            android:id="@+id/addPlaylistButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/oval_button"
            android:backgroundTint="#E1E1E1"
            android:clipChildren="true"
            android:contentDescription="@string/add_playlist_button_text"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:srcCompat="@drawable/plus_symbol"
            tools:ignore="ImageContrastCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistsView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"

            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPlaylistButton"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>